init missing bff components and add doc
